test/tests/stages/16_characters_and_strings/invalid_types/assign_to_string_literal.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CString: 
                    CStringLiteral: 
                      List[3]: 
                        TChar: 102
                        TChar: 111
                        TChar: 111
                    None: 
                  CString: 
                    CStringLiteral: 
                      List[3]: 
                        TChar: 98
                        TChar: 97
                        TChar: 114
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
